fix layout issue with dashboard action results

--- a/cms/components/questionnaire/css/questionnaire.css
+++ b/cms/components/questionnaire/css/questionnaire.css
@@ -153,6 +153,7 @@ td.question_form_label {
 	font-size: 10px;
 	width: auto;
 	color: green;
+	display: block;
 }
 
 
